--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
 
             <tr>
                 <th scope="row">เบอร์โทร :</th>
-                <td>0888888888</td>
+                <td>0638090823</td>
             </tr>            
             <tr>
                 <th scope="row">Facebook :</th>
-                <td>manoch.sangsiri</td>
+                <td>Phannakan</td>
             </tr>            
             <tr>
                 <th scope="row">Line :</th>
-                <td> manoch.cs</td>
+                <td> pr_kan</td>
             </tr>            
             <tr>
                 <th scope="row">Email :</th>
-                <td>sangsiri@gmail.com</td>
+                <td>phannakan.r.6488@gmail.com</td>
             </tr>            
         </tbody>                    
     </table>
